--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<header class="header">
 	<div class="box">
 		<h1 class="h1">Web delevelopment project</h1>
-		<p class="sbtitle">Very suitable to support all web projects</p>
+		<p class="section-subtitle">Very suitable to support all web projects</p>
 		<button class="header-btn trsprnt">Our services</button>
 		<button class="header-btn green">hire is now</button>
 </div>
@@ -35,7 +35,8 @@
 <main class="main">
 	<div class="first">
 		<h2 class="h2">About us</h2>
-		<p class="section">Далеко-далеко за словесными горами в стране гласных и согласных живут, рыбные тексты. Алфавит предупреждал речью дороге предложения журчит повстречался гор проектах заглавных коварных путь. Буквенных мир заголовок обеспечивает даль там напоивший на берегу!</p>
+		<p class="section-subtitle">Далеко-далеко за словесными горами в стране гласных и согласных живут, рыбные тексты. Алфавит предупреждал речью дороге предложения журчит повстречался гор проектах заглавных коварных путь. Буквенных мир заголовок обеспечивает даль там напоивший на берегу!</p>
+		<div class="first-box">
 		<div class="first-item">
 			<img src="img/windows.png" alt="" class="icon">
 			<h3 class="h3"></h3>
@@ -50,6 +51,7 @@
 			<img src="img/apple.png" alt="" class="icon">
 			<h3 class="h3"></h3>
 			<p class="section-subtitle">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Свое, она если журчит единственное однажды живет, ipsum? Пор буквенных мир переписали на берегу вопроса от всех дорогу пояс гор сих меня.</p>
+		</div>
 		</div>
 	</div>
 	<div class="second first">
